--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta charset='utf-8' />
     <title>Mapbox Graticule</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
-    <script src='js/jquery-1.9.1.min.js'></script>
-    <script src='js/mapbox-gl-1.1.1.js'></script>
-    <script src='js/maplibre-grid.js'></script>
+    <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
+    <script src='https://api.mapbox.com/mapbox-gl-js/v1.13.1/mapbox-gl.js'></script>
+    <script src='https://unpkg.com/maplibre-grid@1.0.0/dist/maplibre-grid.js'></script>
     <script src='js/mapgrid.js'></script>
     <script src='js/maplable.js'></script>
-    <link href='css/mapbox-gl-1.1.1.css' rel='stylesheet' />
+    <link href='https://api.mapbox.com/mapbox-gl-js/v1.13.1/mapbox-gl.css' rel='stylesheet' />
     <style>
         body {
             margin: 0;
