--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <script src='https://code.jquery.com/jquery-3.6.0.min.js'></script>
     <script src='https://api.mapbox.com/mapbox-gl-js/v1.13.1/mapbox-gl.js'></script>
-    <script src='https://unpkg.com/maplibre-grid@1.0.0/dist/maplibre-grid.js'></script>
+    <script src='js/maplibre-grid-modified.js'></script>
     <script src='js/mapgrid.js'></script>
     <script src='js/maplable.js'></script>
     <link href='https://api.mapbox.com/mapbox-gl-js/v1.13.1/mapbox-gl.css' rel='stylesheet' />
